# telestrainer

./: .gitignore  README.md
src/: .env.example  Makefile  docker-compose.yml  pyproject.toml
src/docker/: Dockerfile  prod.env.example
src/service/: client.py  main.py  strainer.py
src/service/core/: config.py
src/tests/: test_strainer_smart.py
src/utils/: generate_session_key.py
